# claude-code-memory

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pyre_configuration  Dockerfile  README.md  docker-compose.yml  fix.txt  mcp_server.py  pyproject.toml  pyrightconfig.json  server.py  setup.py
api/: app.py  dependencies.py  detection.py  hot_cache.py  optimization_handlers.py  request_utils.py  routes.py
api/models/: anthropic.py
cli/: process_registry.py  session.py
config/: logging_config.py  settings.py
data/: memory.db
hooks/: hook_utils.py  memory_graph_utils.py  post_tool_use.py  session_start.py  setup_hooks.py  smart_capture.py  user_prompt.py
memory/: __init__.py  graph.py
providers/: __init__.py  base.py  logging_utils.py  openai_compat.py  rate_limit.py
providers/anthropic/: __init__.py  client.py
providers/common/: error_mapping.py  heuristic_tool_parser.py  message_converter.py  sse_builder.py  think_parser.py
providers/nvidia_nim/: request.py
providers/open_router/: request.py
scripts/: health.py  preflight.py
tests/: conftest.py  test_hooks_merge.py  test_install_cycle.py
tmp/: verify_cleanup.py  verify_token_cache.py
web/: index.html
