[project]
name = "cc-memory"
version = "0.1.0"
description = "Persistent multilingual memory for Claude Code"
readme = "README.md"
# Python 3.12 is required — ChromaDB, onnxruntime, and sentence-transformers
# do NOT have binary wheels for Python 3.14 yet.
# uv will automatically download Python 3.12 if not already installed.
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn[standard]>=0.34.0",
    "httpx[http2]",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pydantic-settings>=2.12.0",
    "openai>=2.16.0",
    "loguru>=0.7.0",
    # ChromaDB + sentence-transformers: require Python <3.14 due to
    # onnxruntime and internal pydantic v1 usage.
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "langdetect>=1.0.9",
    "anthropic>=0.40.0",
    "mcp>=1.1.0",
]

[tool.uv]
# Force CPU-only torch — sentence-transformers pulls torch as a transitive dep.
# Without this override uv resolves the CUDA wheels (~3.5GB of nvidia-* packages).
# CPU torch is ~200MB and is all we need for local embeddings.
override-dependencies = [
    "torch>=2.0.0 ; sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PERF", "RUF"]
ignore = [
    "E501",
    "B008",
    "RUF006",
]

[tool.ruff.lint.isort]
known-first-party = ["api", "cli", "config", "messaging", "providers", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"